html redundancy removed

--- a/website/static/templates/donate.html
+++ b/website/static/templates/donate.html
@@ -17,24 +17,7 @@
             <img style="vertical-align: middle; width: 18px; height: 18px;" src="/static/assets/icons/btc.svg">
             &nbsp;(BTC) Bitcoin
           </p>
-          <p class="wallet-actions">
-            <!-- Copy Button -->
-            <button class="action-btn copy-btn">
-              <picture>
-                <source srcset="/static/assets/icons/copy-light.svg" media="(prefers-color-scheme: dark)">
-                <img src="/static/assets/icons/copy-dark.svg" alt="Copy Icon" class="icon">
-              </picture>
-              <!-- <span>Copy</span> -->
-            </button>
-            <!-- Download Button -->
-            <button class="action-btn download-btn">
-              <picture>
-                <source srcset="/static/assets/icons/download-light.svg" media="(prefers-color-scheme: dark)">
-                <img src="/static/assets/icons/download-dark.svg" alt="Download Icon" class="icon">
-              </picture>
-              <!-- <span>Download</span> -->
-            </button>
-          </p>
+          {{template "Wallet-Actions"}}
         </div>
         <p class="wallet-item-address">14yEenAsvTzLZjYUE52xMScjraW8TtY31u</p>
         <!-- New Network Row -->
@@ -53,24 +36,7 @@
             <img style="vertical-align: middle; width: 18px; height: 18px;" src="/static/assets/icons/eth.svg">
             &nbsp;(ETH) Ethereum
           </p>
-          <p class="wallet-actions">
-            <!-- Copy Button -->
-            <button class="action-btn copy-btn">
-              <picture>
-                <source srcset="/static/assets/icons/copy-light.svg" media="(prefers-color-scheme: dark)">
-                <img src="/static/assets/icons/copy-dark.svg" alt="Copy Icon" class="icon">
-              </picture>
-              <!-- <span>Copy</span> -->
-            </button>
-            <!-- Download Button -->
-            <button class="action-btn download-btn">
-              <picture>
-                <source srcset="/static/assets/icons/download-light.svg" media="(prefers-color-scheme: dark)">
-                <img src="/static/assets/icons/download-dark.svg" alt="Download Icon" class="icon">
-              </picture>
-              <!-- <span>Download</span> -->
-            </button>
-          </p>
+          {{template "Wallet-Actions"}}
         </div>
         <p class="wallet-item-address">0xc9ab104ce90259ac53092e8a5c94345b33bb3348</p>
         <!-- New Network Row -->
@@ -89,24 +55,7 @@
             <img style="vertical-align: middle; width: 18px; height: 18px;" src="/static/assets/icons/usdt.svg">
             &nbsp;(USDT) Thether USD
           </p>
-          <p class="wallet-actions">
-            <!-- Copy Button -->
-            <button class="action-btn copy-btn">
-              <picture>
-                <source srcset="/static/assets/icons/copy-light.svg" media="(prefers-color-scheme: dark)">
-                <img src="/static/assets/icons/copy-dark.svg" alt="Copy Icon" class="icon">
-              </picture>
-              <!-- <span>Copy</span> -->
-            </button>
-            <!-- Download Button -->
-            <button class="action-btn download-btn">
-              <picture>
-                <source srcset="/static/assets/icons/download-light.svg" media="(prefers-color-scheme: dark)">
-                <img src="/static/assets/icons/download-dark.svg" alt="Download Icon" class="icon">
-              </picture>
-              <!-- <span>Download</span> -->
-            </button>
-          </p>
+          {{template "Wallet-Actions"}}
         </div>
         <p class="wallet-item-address">TJuDt8W7mayMs1FVYJJ2pcouKxmLh3iEjg</p>
         <!-- New Network Row -->
@@ -125,24 +74,7 @@
             <img style="vertical-align: middle; width: 18px; height: 18px;" src="/static/assets/icons/usdc.svg">
             &nbsp;(USDC) USD Coin
           </p>
-          <p class="wallet-actions">
-            <!-- Copy Button -->
-            <button class="action-btn copy-btn">
-              <picture>
-                <source srcset="/static/assets/icons/copy-light.svg" media="(prefers-color-scheme: dark)">
-                <img src="/static/assets/icons/copy-dark.svg" alt="Copy Icon" class="icon">
-              </picture>
-              <!-- <span>Copy</span> -->
-            </button>
-            <!-- Download Button -->
-            <button class="action-btn download-btn">
-              <picture>
-                <source srcset="/static/assets/icons/download-light.svg" media="(prefers-color-scheme: dark)">
-                <img src="/static/assets/icons/download-dark.svg" alt="Download Icon" class="icon">
-              </picture>
-              <!-- <span>Download</span> -->
-            </button>
-          </p>
+          {{template "Wallet-Actions"}}
         </div>
         <p class="wallet-item-address">0xc9ab104ce90259ac53092e8a5c94345b33bb3348</p>
         <!-- New Network Row -->
@@ -161,24 +93,7 @@
             <img style="vertical-align: middle; width: 18px; height: 18px;" src="/static/assets/icons/bnb.svg">
             &nbsp;(BNB) Binance Coin
           </p>
-          <p class="wallet-actions">
-            <!-- Copy Button -->
-            <button class="action-btn copy-btn">
-              <picture>
-                <source srcset="/static/assets/icons/copy-light.svg" media="(prefers-color-scheme: dark)">
-                <img src="/static/assets/icons/copy-dark.svg" alt="Copy Icon" class="icon">
-              </picture>
-              <!-- <span>Copy</span> -->
-            </button>
-            <!-- Download Button -->
-            <button class="action-btn download-btn">
-              <picture>
-                <source srcset="/static/assets/icons/download-light.svg" media="(prefers-color-scheme: dark)">
-                <img src="/static/assets/icons/download-dark.svg" alt="Download Icon" class="icon">
-              </picture>
-              <!-- <span>Download</span> -->
-            </button>
-          </p>
+          {{template "Wallet-Actions"}}
         </div>
         <p class="wallet-item-address">0xc9ab104ce90259ac53092e8a5c94345b33bb3348</p>
         <!-- New Network Row -->
@@ -197,24 +112,7 @@
             <img style="vertical-align: middle; width: 18px; height: 18px;" src="/static/assets/icons/ton.svg">
             &nbsp;(TON) Toncoin
           </p>
-          <p class="wallet-actions">
-            <!-- Copy Button -->
-            <button class="action-btn copy-btn">
-              <picture>
-                <source srcset="/static/assets/icons/copy-light.svg" media="(prefers-color-scheme: dark)">
-                <img src="/static/assets/icons/copy-dark.svg" alt="Copy Icon" class="icon">
-              </picture>
-              <!-- <span>Copy</span> -->
-            </button>
-            <!-- Download Button -->
-            <button class="action-btn download-btn">
-              <picture>
-                <source srcset="/static/assets/icons/download-light.svg" media="(prefers-color-scheme: dark)">
-                <img src="/static/assets/icons/download-dark.svg" alt="Download Icon" class="icon">
-              </picture>
-              <!-- <span>Download</span> -->
-            </button>
-          </p>
+          {{template "Wallet-Actions"}}
         </div>
         <p class="wallet-item-address">UQBlyCSC-2Ovm_Dybfm5_wJ6zqaalN7jUXeGkx6rOTwYfgCX</p>
         <!-- New Network Row -->
