--- a/website/static/templates/index.html
+++ b/website/static/templates/index.html
@@ -45,16 +45,6 @@
         </button>
       </a>
 
-      <a style="border-bottom: none;" href="https://github.com/korotole">
-        <button class="row-btn">
-          <picture>
-            <source srcset="/static/assets/icons/github-light.svg" media="(prefers-color-scheme: dark)">
-            <img src="/static/assets/icons/github-dark.svg" alt="github" class="icon-big">
-          </picture>
-          <span>GitHub</span>
-        </button>
-      </a>
-
       <a style="border-bottom: none;" href="https://x.com/korotole_">
         <button class="row-btn">
           <picture>
@@ -62,6 +52,16 @@
             <img src="/static/assets/icons/x-dark.svg" alt="x" class="icon-big">
           </picture>
           <span>Twitter/X</span>
+        </button>
+      </a>
+
+      <a style="border-bottom: none;" href="https://github.com/korotole">
+        <button class="row-btn">
+          <picture>
+            <source srcset="/static/assets/icons/github-light.svg" media="(prefers-color-scheme: dark)">
+            <img src="/static/assets/icons/github-dark.svg" alt="github" class="icon-big">
+          </picture>
+          <span>GitHub</span>
         </button>
       </a>
 
@@ -74,7 +74,7 @@
       <a href="https://github.com/korotole">github</a>&nbsp;
     </p> -->
     <p>
-      <strong><a href="mailto:korotole@icloud.com">korotole@icloud.com</a></strong>
+      <strong><a href="mailto:korotole@icloud.com">ok@korotole.com</a></strong>
     </p>
 
     <h3>Selected University Projects:</h3>
