--- a/website/static/templates/tpl_footer.html
+++ b/website/static/templates/tpl_footer.html
@@ -2,7 +2,7 @@
 <div class="footer">
     <p><small><small>
         <a href="/login" class="emoji-btn">🔑</a> | 
-        &copy; 2025 Ing. Oleksandr Korotetskyi. All rights reserved. | 
+        &copy; 2025 KOROTOLE.COM | 
         <a href="/donate">donate</a> | 
         visitors: <span id="visitor-count">{{ . }}</span>
     </small></small></p>
