--- a/website/static/templates/tpl_header.html
+++ b/website/static/templates/tpl_header.html
@@ -1,5 +1,8 @@
 {{define "Header"}}
 <div class="profile-container">
+    <div class="mobile-name-container">
+        <h1 class="main-header">OLEKSANDR KOROTETSKYI</h1>
+    </div>
     <picture>
       <!-- Dark mode image -->
       <source srcset="/static/assets/favs/fav-light.png" media="(prefers-color-scheme: dark)">
@@ -7,8 +10,8 @@
       <img src="/static/assets/favs/fav-dark.png" alt="avatar" class="profile-photo">
     </picture>
     <div class="text-container">
-        <h1 class="main-header">Oleksandr Korotetskyi</h1>
-        <p>&nbsp;Software developer, AI & ML enthusiast – 
+        <h1 class="main-header desktop-only">OLEKSANDR KOROTETSKYI</h1>
+        <p class="header-text">Software developer, AI & ML enthusiast – 
             <a href="https://chatgpt.com/share/67ac9d99-90b8-8000-8644-5317bb347381" target="_blank" rel="noopener noreferrer">about me</a>, 
             <a href="/cv">résumé</a>.
         </p>
