--- a/website/static/templates/index.html
+++ b/website/static/templates/index.html
@@ -14,7 +14,6 @@
     <h3>Contacts & Media:</h3>
 
     <p class="row-buttons">
-      <!-- Download Button -->
       <a style="border-bottom: none;" href="https://t.me/korotole">
       <button class="row-btn">
         <picture>
@@ -74,7 +73,7 @@
       <a href="https://github.com/korotole">github</a>&nbsp;
     </p> -->
     <p>
-      <strong><a href="mailto:korotole@icloud.com">ok@korotole.com</a></strong>
+      <strong><a href="mailto:ok@korotole.com">ok@korotole.com</a></strong>
     </p>
 
     <h3>Selected University Projects:</h3>
