--- a/website/static/templates/tpl_footer.html
+++ b/website/static/templates/tpl_footer.html
@@ -1,10 +1,9 @@
 {{define "Footer"}}
 <div class="footer">
-    <p><small><small>
-        <a href="/login" class="emoji-btn">🔑</a> | 
-        &copy; 2025 KOROTOLE.COM | 
-        <a href="/donate">donate</a> | 
+    <p><a href="/login" class="emoji-btn">🔑</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="/">home</a>&nbsp;&nbsp;|&nbsp;&nbsp;blog&nbsp;&nbsp;|&nbsp;&nbsp;books&nbsp;&nbsp;|&nbsp;&nbsp;<a href="/donate">support</a></p>
+    <p class="copyright">
+        &copy; 2025 korotole.com;
         visitors: <span id="visitor-count">{{ . }}</span>
-    </small></small></p>
+    </p>
 </div>
 {{end}}
