--- a/website/static/templates/index.html
+++ b/website/static/templates/index.html
@@ -82,6 +82,8 @@
     <p>🧬 <a href="http://opac.lib.tuke.sk/tukeopac/openURL?sid=tuk00102103">Genome Structure Visualization</a> — made-in-a-hurry bachelor's thesis, <a href="https://github.com/korotole/Bachelor-Thesis/blob/master/thesis%20(11).pdf">PDF</a>.</p>
     <p>🍝 <a href="https://www.suz.cvut.cz/en/canteens-catering/technical-canteen">Technical Canteen Load Analysis</a> — semestral team project; <a href="/files/etc/vem.png">info</a>, <a href="/files/etc/vem.pdf">PDF</a>.</p>
 
+    {{template "Newsletter-Subscribe" .}}
+
     {{template "Footer" .}}
 
   </div>
