--- a/website/static/templates/tpl_footer.html
+++ b/website/static/templates/tpl_footer.html
@@ -1,6 +1,8 @@
 {{define "Footer"}}
 <div class="footer">
-    <p><a href="/login" class="emoji-btn">🔑</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="/">home</a>&nbsp;&nbsp;|&nbsp;&nbsp;blog&nbsp;&nbsp;|&nbsp;&nbsp;books&nbsp;&nbsp;|&nbsp;&nbsp;<a href="/donate">support</a></p>
+    <div class="navbar">
+        <p><a href="/login" class="emoji-btn">🔑</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="/">home</a>&nbsp;&nbsp;|&nbsp;&nbsp;blog&nbsp;&nbsp;|&nbsp;&nbsp;books&nbsp;&nbsp;|&nbsp;&nbsp;<a href="/donate">support</a></p>    
+    </div>
     <p class="copyright">
         &copy; 2025 korotole.com;
         visitors: <span id="visitor-count">{{ . }}</span>
